--- a/Practice Files/Chapter 5 Pandas.ipynb
+++ b/Practice Files/Chapter 5 Pandas.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pure Practice File - Nothing Yet"
+    "## Chapter 5: Pandas\n",
+    "\n",
+    "This is an overview of the pandas module. I should be pretty familiar with it by now."
    ]
   },
   {
